--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -272,15 +272,15 @@
 									<%2.times do%>
 									<div class="row backlog">
 										<div class="dropdown col-xs-3">
-											<button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 												待办中
 												<span class="caret my-caret"></span>
 											</button>
-											<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
 												<li><a href="#">Action</a></li>
-												<li><a href="#">Another action</a></li>
-												<li><a href="#">Something else here</a></li>
-												<li><a href="#">Separated link</a></li>
+												<li><a href="#">other</a></li>
+												<li><a href="#">Some</a></li>
+												<li><a href="#">link</a></li>
 											</ul>
 										</div>
 										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
@@ -291,15 +291,15 @@
 									<%2.times do%>
 									<div class="row backlog">
 										<div class="dropdown col-xs-3">
-											<button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 												待办中
 												<span class="caret my-caret"></span>
 											</button>
-											<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
 												<li><a href="#">Action</a></li>
-												<li><a href="#">Another action</a></li>
-												<li><a href="#">Something else here</a></li>
-												<li><a href="#">Separated link</a></li>
+												<li><a href="#">other</a></li>
+												<li><a href="#">Some</a></li>
+												<li><a href="#">link</a></li>
 											</ul>
 										</div>
 										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
@@ -310,15 +310,15 @@
 									<%2.times do%>
 									<div class="row backlog">
 										<div class="dropdown col-xs-3">
-											<button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 												待办中
 												<span class="caret my-caret"></span>
 											</button>
-											<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
 												<li><a href="#">Action</a></li>
-												<li><a href="#">Another action</a></li>
-												<li><a href="#">Something else here</a></li>
-												<li><a href="#">Separated link</a></li>
+												<li><a href="#">other</a></li>
+												<li><a href="#">Some</a></li>
+												<li><a href="#">link</a></li>
 											</ul>
 										</div>
 										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
@@ -328,13 +328,86 @@
 								</div>
 
 								<div class="col-xs-6 ace_content_page_right">
-									33333333
-								</div>
-								
-
-
-
-								
+									<div class="my-task">
+										<h3>任务详情</h3>
+										<hr class="my-line">
+									</div>
+									<div class="my-details">
+										<div class="col-xs-2 dropdown">
+											<botton class="my-btn my-black btn btn-default">所属任务</botton>
+										</div>
+										<div class="col-xs-2 dropdown" style="padding-left:10px">
+											<div class="dropdown">
+												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+													负责人
+													<span class="caret my-caret"></span>
+												</button>
+												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+													<li><a href="#">Action</a></li>
+													<li><a href="#">other</a></li>
+													<li><a href="#">Some</a></li>
+													<li><a href="#">Separate</a></li>
+												</ul>
+											</div>
+										</div>
+										<div class="col-xs-2 dropdown" style="padding-left:20px">
+											<botton class="my-btn my-black btn btn-default">截止日期</botton>
+										</div>
+										<div class="col-xs-2 dropdown" style="padding-left:30px">
+											<div class="dropdown">
+												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+													优先级
+													<span class="caret my-caret"></span>
+												</button>
+												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+													<li><a href="#">Action</a></li>
+													<li><a href="#">other</a></li>
+													<li><a href="#">Some</a></li>
+													<li><a href="#">Separate</a></li>
+												</ul>
+											</div>
+										</div>
+										<div class="col-xs-2 dropdown" style="padding-left:40px">
+											<botton class="my-btn my-black btn btn-default">附件</botton>
+										</div>
+										<div class="col-xs-2 dropdown" style="padding-left:25px">
+											<div class="dropdown">
+												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+													操作
+													<span class="caret my-caret"></span>
+												</button>
+												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+													<li><a href="#">Action</a></li>
+													<li><a href="#">other</a></li>
+													<li><a href="#">Some</a></li>
+													<li><a href="#">Separate</a></li>
+												</ul>
+											</div>
+										</div>
+									</div><br>
+									<div class="col-xs-4">
+										<h4>业务需求讨论</h4>
+									</div>
+									<div class="dropdown col-xs-8">
+										<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+											待办中
+											<span class="caret my-caret"></span>
+										</button>
+										<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+											<li><a href="#">Action</a></li>
+											<li><a href="#">other</a></li>
+											<li><a href="#">Some</a></li>
+											<li><a href="#">link</a></li>
+										</ul>
+									</div><br>
+									<div class="my-task">
+										<h3>任务动态</h3>
+										<hr class="my-line">
+									</div>
+									<div class="my-trends">
+									</div>
+									
+									</div>	
 							<!-- PAGE CONTENT ENDS -->
 						</div>
 					</div><!-- /.col -->
