--- a/app/views/training_platform/task_categories/_detail.html.erb
+++ b/app/views/training_platform/task_categories/_detail.html.erb
@@ -1,7 +1,7 @@
 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   
-  <div class="row task-category-detail">
+  <div id="rightTopContent" class="row task-category-detail">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h3><%= @task_category.try(:name) %></h3>
       <p class="task-categoty-description">
