--- a/app/views/training_platform/share/_comment.html.erb
+++ b/app/views/training_platform/share/_comment.html.erb
@@ -1,6 +1,7 @@
-  <div class="row comment-list">
+<div class="row comment-list">
+  <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
     <div class="widget-box transparent ace_widget_box">
-      <div class="widget-header widget-header-small">
+      <div id="commentTitle" class="widget-header widget-header-small">
         <h4 class="blue smaller">
           <i class="icon-rss orange"></i>
           动态
@@ -15,7 +16,7 @@
 
       <div class="widget-body">
         <div class="widget-main padding-8">
-          <div id="profile-feed-1" class="profile-feed">
+          <div id="commentList" class="profile-feed">
             <% commentable.root_comments.each do |comment| %>
               <div class="profile-activity clearfix">
                 <div>
@@ -38,7 +39,7 @@
               </div>
             <% end %>
           </div>
-          <%= form_tag training_platform_comments_path, remote: true, format: :js do %>
+          <%= form_tag training_platform_comments_path, remote: true, format: :js, id: "commentForm" do %>
             <div class="form-actions">
               <div class="input-group">
                 <%= text_area_tag "body", "", placeholder: "讨论", class: "form-control", rows: 1 %>
@@ -53,8 +54,40 @@
               </div>
             </div>
           <% end %>
-          
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<script type="text/javascript">
+
+  $(function(){
+    
+    //菜单栏高度
+    var head = $("#headerMenu").outerHeight();
+
+    //右侧检索通知栏高度
+    var rightTitle = $(".ace_content_right_title").outerHeight();
+
+    //屏幕可见高端
+    var clientHeight = document.body.clientHeight;
+
+    //评论高度
+    var commentTitle = $("#commentTitle").outerHeight();
+
+    //右侧上半部分内容高度
+    var rightTopContent = $("#rightTopContent").outerHeight();
+
+    //高度计算
+    var scrollHeight = clientHeight - (head + rightTitle + commentTitle + rightTopContent +25) - document.body.scrollTop;
+
+    $('#commentList').slimScroll({
+      height: scrollHeight + 'px',
+      alwaysVisible : true
+    });
+
+    var chat = $(".ace_content_page_right").width();
+    $("#commentForm").width(chat);
+  });
+</script>
