--- a/app/views/training_platform/share/_task_list.html.erb
+++ b/app/views/training_platform/share/_task_list.html.erb
@@ -119,21 +119,26 @@
 
 <script type="text/javascript">
   $(function(){
-    //计算左右模块高度以及讨论区宽度
-    var a = $(".navbar").outerHeight();
-    var b = $(".ace_content_right_title").outerHeight();
-    var c = $(".my-task").outerHeight();
-    var wnd = document.body.clientHeight;
-    var d = wnd - (a + b + c + 21) - document.body.scrollTop;
+    
+    //菜单栏高度
+    var head = $("#headerMenu").outerHeight();
+
+    //右侧检索通知栏高度
+    var rightTitle = $(".ace_content_right_title").outerHeight();
+
+    //屏幕可见高端
+    var clientHeight = document.body.clientHeight;
+
+    var h4Title = $(".my-task").outerHeight();
+
+    //高度计算
+    var scrollHeight = clientHeight - (head + rightTitle + h4Title + 25) - document.body.scrollTop;
+
     $('#taskListAllContent').slimScroll({
-      height: (d + 'px'),
+      height: scrollHeight + 'px',
       alwaysVisible : false
     });
-    // var chat = $(".ace_content_page_right").width();
-    // $(".addComment").width(chat);
 
-    // $(".scoll-part").perfectScrollbar();
-    // $(".scoll-part").perfectScrollbar('update');
   });
 </script>
 
