--- a/app/views/training_platform/user_projects/_form.html.erb
+++ b/app/views/training_platform/user_projects/_form.html.erb
@@ -39,7 +39,7 @@
 <!-- </div> --> 
 
 
-<div  class="my-nav1">
+<!-- <div  class="my-nav1">
           <ul class="nav nav-tabs ace_modal_ul" role="tablist">
             <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">任务列表</a></li>
             <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">项目成员</a></li>
@@ -155,4 +155,4 @@
 
             </div>
         </div>
-</div> 
+</div>  -->
