--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -213,9 +213,11 @@
       .btn {
         width: 95%;
       }
+    }
 
+    .task-content {
       .task-description {
-        height: 100px;
+        height: 80px;
       }
     }
     
