project course dynamic

--- a/app/views/training_platform/project_courses/index.html.erb
+++ b/app/views/training_platform/project_courses/index.html.erb
@@ -47,7 +47,7 @@
 							</div>
 							<!-- begin courses -->
 							<div class="clearfix scoll-part">
-								<%= render "project_courses" %>
+								<%= render partial: 'project_course', locals: {project_courses: @project_courses} %>
 							</div><!-- end courses -->
 						</div>
 
