--- a/app/views/training_platform/project_courses/_project_course.html.erb
+++ b/app/views/training_platform/project_courses/_project_course.html.erb
@@ -1,7 +1,7 @@
 <% project_courses.each do |project_course| %>
 	<div class="col-xs-12 col-md-6 plat-course-col">
 		<div class="bordered">
-			<%= link_to "#" do %>
+			<%= link_to course_path(project_course.try(:course).try(:id)) do %>
 				<%= image_tag(project_course.try(:course).try(:image).try(:avatar).url(:c_360_200), class: "img-responsive") %>
 				<div class="col-sm-12 mt-10">
 					<p class="text-muted"><%= project_course.try(:course).try(:name) %></p>
