--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -3,9 +3,9 @@
 		<div class="bordered">
 		  <%= link_to course_path(course.id, category: category) do %>
 				<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
-				<%= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar") if course.teacher %>
-				<span class="pull-right name"><%= course.try(:teacher).try(:name) %></span>
-				<div class="col-sm-12 mt-40">
+				<%#= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar") if course.teacher %>
+				<!-- <span class="pull-right name"><%= course.try(:teacher).try(:name) %></span> -->
+				<div class="col-sm-12 mt-20">
 					<p class="text-muted"><%= course.try(:teacher).try(:description) %></p>
 					<p class="text-muted"><%= course.title %></p>
 				</div>
