--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -78,10 +78,15 @@
 
     <div class="row task-content">
       <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
-        <h4> <%= @task.name %>
-        
-        </h4>
-         <div id="tag_container" class="ggTagContainer"></div>
+        <h4> <%= @task.name %></h4>
+         <div class="tags tags-list">
+          <% @task.tag_list.each do |tag| %>
+            <span class="tag"><%= tag %>
+            <%= link_to("x", remove_training_platform_project_task_path(@project,@task, tag: tag) , class: "close", remote: true, format: :js) %>
+            </span>
+          <% end %>
+          <input type="input" name="tags" id="addTag" value="" placeholder="请输入标签" >
+          </div>
        </div> 
 
       <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
@@ -109,3 +114,18 @@
   
   <%= render partial: 'training_platform/share/comment', locals: {commentable: @task}%>
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    $("#addTag").blur(function(){
+      if($(this).val() != ""){
+        $.ajax({
+          url: "<%= tag_training_platform_project_task_path(@project, @task)%>.js",
+          type: "post",
+          data: {tag: $(this).val()}
+        });
+      }
+    });
+  });
+  
+</script>
