--- a/app/views/training_platform/share/_comment.html.erb
+++ b/app/views/training_platform/share/_comment.html.erb
@@ -8,9 +8,9 @@
         </h4>
 
         <div class="widget-toolbar action-buttons">
-          <a href="#" data-action="reload">
-            <i class="icon-refresh blue"></i>
-          </a>
+        <%=link_to training_platform_comments_path(commentable_name: commentable.class, commentable_id: commentable.id), method: :get, remote: true, format: :js, "data-action" => "reload" do %>
+          <i class="icon-refresh blue"></i>
+          <% end %>
         </div>
       </div>
 
@@ -18,43 +18,43 @@
         <div class="widget-main padding-8">
           <div id="commentList" class="profile-feed">
             <% commentable.root_comments.each do |comment| %>
-              <div class="profile-activity clearfix">
-                <div>
-                  <%= image_tag(comment.try(:user).try(:show_image) , class: "pull-left") %>
-                  <a class="user" href="#"> <%= comment.try(:user).try(:show_name) %> </a>
-                  <%= comment.body %>
-                  <!-- 附件链接 -->
-                  <!-- <a href="#">Take a look</a> -->
+            <div class="profile-activity clearfix">
+              <div>
+                <%= image_tag(comment.try(:user).try(:show_image) , class: "pull-left") %>
+                <a class="user" href="#"> <%= comment.try(:user).try(:show_name) %> </a>
+                <%= comment.body %>
+                <!-- 附件链接 -->
+                <!-- <a href="#">Take a look</a> -->
 
-                  <div class="time">
-                    <i class="icon-time bigger-110"></i>
-                    <%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S")%>
-                  </div>
+                <div class="time">
+                  <i class="icon-time bigger-110"></i>
+                  <%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S")%>
                 </div>
-                <%=link_to training_platform_comment_path(comment), method: :delete, class:"red", remote: true,format: :js do %>
-                  <div class="tools action-buttons">
-                      <i class="icon-remove bigger-125"></i>
-                  </div>
-                <% end %>
               </div>
+              <%=link_to training_platform_comment_path(comment), method: :delete, class:"red", remote: true, format: :js do %>
+              <div class="tools action-buttons">
+                <i class="icon-remove bigger-125"></i>
+              </div>
+              <% end %>
+            </div>
             <% end %>
           </div>
         </div>
         <%= form_tag training_platform_comments_path, remote: true, format: :js, id: "commentForm" do %>
-            <div class="form-actions">
-              <div class="input-group">
-                <%= text_area_tag "body", "", placeholder: "讨论", class: "form-control", rows: 1 %>
-                <%= hidden_field_tag "commentable_name", commentable.class %>
-                <%= hidden_field_tag "commentable_id",  commentable.id %>
-                <span class="input-group-btn">
-                  <button class="btn btn-md btn-info no-radius" type="submit">
-                    <i class="icon-share-alt"></i>
-                    发送
-                  </button>
-                </span>
-              </div>
-            </div>
-          <% end %>
+        <div class="form-actions">
+          <div class="input-group">
+            <%= text_area_tag "body", "", placeholder: "讨论", class: "form-control", rows: 1 %>
+            <%= hidden_field_tag "commentable_name", commentable.class %>
+            <%= hidden_field_tag "commentable_id",  commentable.id %>
+            <span class="input-group-btn">
+              <button class="btn btn-md btn-info no-radius" type="submit">
+                <i class="icon-share-alt"></i>
+                发送
+              </button>
+            </span>
+          </div>
+        </div>
+        <% end %>
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
 <script type="text/javascript">
 
   $(function(){
-    
+
     //菜单栏高度
     var head = $("#headerMenu").outerHeight();
 
